# adaptive_odom_filter

./: CHANGELOG.md  CMakeLists.txt  README.md  package.xml
config/: adaptive_filter_parameters.yaml  adaptive_robust_filter_parameters.yaml
include/: ekf_adaptive_tools.h  settings_adaptive_filter.h
include/adaptive_odom_filter/: adaptive_robust_ekf.h  alphaBetaFilter.h  ekf_adaptive_tools.h
include/ekf_adaptive_tools/: ekf_adaptive_tools.cpp
install/: local_setup.sh  setup.sh
install/adaptive_odom_filter/share/adaptive_odom_filter/: package.bash  package.zsh
launch/: adaptive_filter.launch  adaptive_filter_fastlio_wheelodom.launch.py  adaptive_filter_odom.launch  adaptive_filter_odom.launch.py  adaptive_filter_test.launch  adaptive_robust_filter_ekf_loam.launch  adaptive_robust_filter_odom.launch  adaptive_robust_filter_odom.launch.py
log/: latest_build
optimization/: README.md  bayesian_filter_optimizer.py
scripts/: computational_analysis.md  computational_analysis.py  fake_odometry_path.py
src/: EKFAdaptiveFilter.cpp  EKFRobustAdaptiveFilter.cpp  adaptive_robust_ekf.cpp  adaptive_robust_ekf_first.cpp  alphaBetaFilter.cpp  ekf_adaptive_tools.cpp
src/old/: adaptive_covariance.cpp
