<?xml version="1.0"?>
<package format="3">
  <name>adaptive_odom_filter</name>
  <version>0.0.1</version>
  <description>Adaptive and robust EKF odometry fusion for ROS 2.</description>

  <maintainer email="gilmarpcruzjunior@gmail.com">gilmar</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rtabmap_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <build_depend>eigen3_cmake_module</build_depend>
  <build_export_depend>eigen3_cmake_module</build_export_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosidl_runtime_py</exec_depend>
  <exec_depend>python3-psutil</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
